# assignment1

./: CMakeLists.txt  package.xml  setup.py
launch/: assignment.launch.py  assignment_2wheels.launch.py  assignment_4wheels_mecanum.launch.py  assignment_4wheels_skid_steer.launch.py  assignment_4wheels_skid_streer.launch.py  assignment_husarion.launch.py  assignment_husarion_sim.launch.py
scripts/: aruco_detection.py  find_aruco_markers.py
